[package]
name = "bitfab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { version = "2" }
clap = { version = "3.2.17" ,features = ['derive'] }
http_core = { version = "0.1.0" }
tokio = { version = "1.20.1", features = ["full"] }

[workspace]
members = [
    "core/net/http_core",
    "core/net/router"
]

[patch.crates-io]
http_core = { path = "./core/net/http_core" }
router = { path = "./core/net/router" }
